# asr_c

./: CMakeLists.txt  main.cpp
core/c/: constant.cpp  model.cpp  readwav.cpp  reshape.cpp
core/headers/: constant.h  model.h  readwav.h  reshape.h
model/: fw_gru_bias.txt  fw_gru_kernel.txt  fw_gru_r_kernel.txt  gru_bias.txt  gru_kernel.txt  gru_r_kernel.txt  log.txt  output.txt  sa1_gengxin.txt
